Finishes to set up numbers and reference numbers. Begins to work on auto-relogin on expired sessions
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1656 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -6,6 +6,7 @@ __minimum__:
   - authentication::login
   - authentication::logout
   - authentication::register
+  - authentication::relogin
   - company::about
   - company::change_password
   - company::formalize
