--- a/test/fixtures/sale_payment_modes.yml
+++ b/test/fixtures/sale_payment_modes.yml
@@ -22,7 +22,7 @@
 #
 #  cash_id                 :integer          
 #  commission_account_id   :integer          
-#  commission_amount       :decimal(16, 2)   default(0.0), not null
+#  commission_base_amount  :decimal(16, 2)   default(0.0), not null
 #  commission_percent      :decimal(16, 2)   default(0.0), not null
 #  company_id              :integer          not null
 #  created_at              :datetime         not null
@@ -43,7 +43,7 @@
 # == Fixture: sale_payment_modes
 #
 # sale_payment_modes_001:
-#   commission_amount: 0
+#   commission_base_amount: 0
 #   commission_percent: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
