--- a/test/fixtures/sale_payments.yml
+++ b/test/fixtures/sale_payments.yml
@@ -20,37 +20,40 @@
 # 
 # == Table: sale_payments
 #
-#  account_number   :string(255)      
-#  accounted_at     :datetime         
-#  amount           :decimal(16, 2)   not null
-#  bank             :string(255)      
-#  check_number     :string(255)      
-#  company_id       :integer          not null
-#  created_at       :datetime         not null
-#  created_on       :date             
-#  creator_id       :integer          
-#  deposit_id       :integer          
-#  id               :integer          not null, primary key
-#  journal_entry_id :integer          
-#  lock_version     :integer          default(0), not null
-#  mode_id          :integer          not null
-#  number           :string(255)      
-#  paid_on          :date             
-#  parts_amount     :decimal(16, 2)   not null
-#  payer_id         :integer          
-#  receipt          :text             
-#  received         :boolean          default(TRUE), not null
-#  responsible_id   :integer          
-#  scheduled        :boolean          not null
-#  to_bank_on       :date             default(CURRENT_DATE), not null
-#  updated_at       :datetime         not null
-#  updater_id       :integer          
+#  account_number        :string(255)      
+#  accounted_at          :datetime         
+#  amount                :decimal(16, 2)   not null
+#  bank                  :string(255)      
+#  check_number          :string(255)      
+#  commission_account_id :integer          
+#  commission_amount     :decimal(16, 2)   default(0.0), not null
+#  company_id            :integer          not null
+#  created_at            :datetime         not null
+#  created_on            :date             
+#  creator_id            :integer          
+#  deposit_id            :integer          
+#  id                    :integer          not null, primary key
+#  journal_entry_id      :integer          
+#  lock_version          :integer          default(0), not null
+#  mode_id               :integer          not null
+#  number                :string(255)      
+#  paid_on               :date             
+#  parts_amount          :decimal(16, 2)   not null
+#  payer_id              :integer          
+#  receipt               :text             
+#  received              :boolean          default(TRUE), not null
+#  responsible_id        :integer          
+#  scheduled             :boolean          not null
+#  to_bank_on            :date             default(CURRENT_DATE), not null
+#  updated_at            :datetime         not null
+#  updater_id            :integer          
 #
 #
 # == Fixture: sale_payments
 #
 # sale_payments_001:
 #   amount: 0
+#   commission_amount: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
