Fixes the bug on deposit accountizing
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1658 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -578,6 +578,7 @@ manage_payment_modes:
   - purchase_payment_modes_dyta
   - sale_payment_mode_create
   - sale_payment_mode_delete
+  - sale_payment_mode_reflect
   - sale_payment_mode_update
   - sale_payment_modes
   - sale_payment_modes_dyta
