--- a/test/fixtures/land_parcel_kinships.yml
+++ b/test/fixtures/land_parcel_kinships.yml
@@ -495,4 +495,49 @@
 #   parent_land_parcel_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: land_parcel_kinships
+#
+#  child_land_parcel_id  :integer          not null
+#  company_id            :integer          not null
+#  created_at            :datetime         not null
+#  creator_id            :integer          
+#  id                    :integer          not null, primary key
+#  lock_version          :integer          default(0), not null
+#  nature                :string(16)       
+#  parent_land_parcel_id :integer          not null
+#  updated_at            :datetime         not null
+#  updater_id            :integer          
+#
+#
+# == Fixture: land_parcel_kinships
+#
+# land_parcel_kinships_001:
+#   child_land_parcel_id: 1
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   parent_land_parcel_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
 #
