--- a/test/fixtures/production_chain_tokens.yml
+++ b/test/fixtures/production_chain_tokens.yml
@@ -189,6 +189,59 @@
 #  lock_version        :integer          default(0), not null
 #  number              :string(255)      not null
 #  production_chain_id :integer          not null
+#  started_at          :datetime         not null
+#  stopped_at          :datetime         
+#  story               :text             
+#  updated_at          :datetime         not null
+#  updater_id          :integer          
+#  where_id            :integer          not null
+#  where_type          :string(255)      not null
+#
+#
+# == Fixture: production_chain_tokens
+#
+# production_chain_tokens_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   number: "Lorem ipsum"
+#   production_chain_id: 1
+#   started_at: 2009-07-19 19:13:59 +02:00
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#   where_id: 1
+#   where_type: "Lorem ipsum"
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_tokens
+#
+#  comment             :text             
+#  company_id          :integer          not null
+#  created_at          :datetime         not null
+#  creator_id          :integer          
+#  id                  :integer          not null, primary key
+#  lock_version        :integer          default(0), not null
+#  number              :string(255)      not null
+#  production_chain_id :integer          not null
 #  updated_at          :datetime         not null
 #  updater_id          :integer          
 #
