--- a/test/fixtures/cash_transfers.yml
+++ b/test/fixtures/cash_transfers.yml
@@ -20,69 +20,75 @@
 # 
 # == Table: cash_transfers
 #
-#  accounted_at     :datetime         
-#  amount           :decimal(16, 2)   default(0.0), not null
-#  comment          :text             
-#  company_id       :integer          not null
-#  created_at       :datetime         not null
-#  creator_id       :integer          
-#  currency_amount  :decimal(16, 2)   default(0.0), not null
-#  currency_id      :integer          not null
-#  currency_rate    :decimal(16, 6)   default(1.0), not null
-#  emitter_cash_id  :integer          not null
-#  id               :integer          not null, primary key
-#  journal_entry_id :integer          
-#  lock_version     :integer          default(0), not null
-#  number           :string(255)      not null
-#  receiver_cash_id :integer          not null
-#  updated_at       :datetime         not null
-#  updater_id       :integer          
+#  accounted_at              :datetime         
+#  comment                   :text             
+#  company_id                :integer          not null
+#  created_at                :datetime         not null
+#  created_on                :date             
+#  creator_id                :integer          
+#  currency_id               :integer          
+#  emitter_amount            :decimal(16, 2)   default(0.0), not null
+#  emitter_cash_id           :integer          not null
+#  emitter_currency_id       :integer          not null
+#  emitter_currency_rate     :decimal(16, 6)   default(1.0), not null
+#  emitter_journal_entry_id  :integer          
+#  id                        :integer          not null, primary key
+#  lock_version              :integer          default(0), not null
+#  number                    :string(255)      not null
+#  receiver_amount           :decimal(16, 2)   default(0.0), not null
+#  receiver_cash_id          :integer          not null
+#  receiver_currency_id      :integer          
+#  receiver_currency_rate    :decimal(16, 6)   
+#  receiver_journal_entry_id :integer          
+#  updated_at                :datetime         not null
+#  updater_id                :integer          
 #
 #
 # == Fixture: cash_transfers
 #
 # cash_transfers_001:
-#   amount: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
-#   currency_amount: 0
-#   currency_id: 1
-#   currency_rate: 0
+#   emitter_amount: 0
 #   emitter_cash_id: 1
+#   emitter_currency_id: 1
+#   emitter_currency_rate: 0
 #   id: 1
 #   number: "Lorem ipsum"
+#   receiver_amount: 0
 #   receiver_cash_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 
 cash_transfers_001:
-  amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  currency_amount: 0
-  currency_id: 1
-  currency_rate: 0
+  emitter_amount: 10
   emitter_cash_id: 1
+  emitter_currency_id: 1
+  emitter_currency_rate: 1
   id: 1
-  number: "Lorem ipsum"
+  number: "0001"
+  receiver_amount: 10
   receiver_cash_id: 3
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
-cash_transfers_002:
-  amount: 0
+
+cash_transfers_001:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  currency_amount: 0
-  currency_id: 1
-  currency_rate: 0
+  emitter_amount: 100
   emitter_cash_id: 3
-  id: 2
-  number: "Lorem ipsum"
+  emitter_currency_id: 1
+  emitter_currency_rate: 1
+  id: 1
+  number: "0001"
+  receiver_amount: 100
   receiver_cash_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
