--- a/test/fixtures/production_chain_work_center_uses.yml
+++ b/test/fixtures/production_chain_work_center_uses.yml
@@ -18,30 +18,30 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
-#  company_id   :integer          not null
-#  created_at   :datetime         not null
-#  creator_id   :integer          
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  operation_id :integer          not null
-#  tool_id      :integer          not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer          
+#  company_id     :integer          not null
+#  created_at     :datetime         not null
+#  creator_id     :integer          
+#  id             :integer          not null, primary key
+#  lock_version   :integer          default(0), not null
+#  tool_id        :integer          not null
+#  updated_at     :datetime         not null
+#  updater_id     :integer          
+#  work_center_id :integer          not null
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   operation_id: 1
 #   tool_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   work_center_id: 1
 #
 
 # = Informations
@@ -64,7 +64,95 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
+#
+#  company_id     :integer          not null
+#  created_at     :datetime         not null
+#  creator_id     :integer          
+#  id             :integer          not null, primary key
+#  lock_version   :integer          default(0), not null
+#  tool_id        :integer          not null
+#  updated_at     :datetime         not null
+#  updater_id     :integer          
+#  work_center_id :integer          not null
+#
+#
+# == Fixture: production_chain_work_center_uses
+#
+# production_chain_work_center_uses_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   tool_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#   work_center_id: 1
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_work_center_uses
+#
+#  company_id     :integer          not null
+#  created_at     :datetime         not null
+#  creator_id     :integer          
+#  id             :integer          not null, primary key
+#  lock_version   :integer          default(0), not null
+#  tool_id        :integer          not null
+#  updated_at     :datetime         not null
+#  updater_id     :integer          
+#  work_center_id :integer          not null
+#
+#
+# == Fixture: production_chain_work_center_uses
+#
+# production_chain_work_center_uses_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   tool_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#   work_center_id: 1
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -77,9 +165,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -108,7 +196,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -121,9 +209,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -152,7 +240,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -165,9 +253,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -196,7 +284,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -209,9 +297,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -240,7 +328,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -253,9 +341,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -284,7 +372,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -297,9 +385,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -328,7 +416,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -341,9 +429,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -372,7 +460,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -385,9 +473,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -416,7 +504,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -429,9 +517,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -460,7 +548,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -473,9 +561,9 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -504,7 +592,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operation_uses
+# == Table: production_chain_work_center_uses
 #
 #  company_id   :integer          not null
 #  created_at   :datetime         not null
@@ -517,9 +605,141 @@
 #  updater_id   :integer          
 #
 #
-# == Fixture: production_chain_operation_uses
+# == Fixture: production_chain_work_center_uses
 #
-# production_chain_operation_uses_001:
+# production_chain_work_center_uses_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   operation_id: 1
+#   tool_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_work_center_uses
+#
+#  company_id   :integer          not null
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  operation_id :integer          not null
+#  tool_id      :integer          not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
+#
+#
+# == Fixture: production_chain_work_center_uses
+#
+# production_chain_work_center_uses_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   operation_id: 1
+#   tool_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_work_center_uses
+#
+#  company_id   :integer          not null
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  operation_id :integer          not null
+#  tool_id      :integer          not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
+#
+#
+# == Fixture: production_chain_work_center_uses
+#
+# production_chain_work_center_uses_001:
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   operation_id: 1
+#   tool_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+# = Informations
+# 
+# == License
+# 
+# Ekylibre - Simple ERP
+# Copyright (C) 2009-2010 Brice Texier, Thibaud Mérigon
+# 
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see http://www.gnu.org/licenses.
+# 
+# == Table: production_chain_work_center_uses
+#
+#  company_id   :integer          not null
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  operation_id :integer          not null
+#  tool_id      :integer          not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
+#
+#
+# == Fixture: production_chain_work_center_uses
+#
+# production_chain_work_center_uses_001:
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
