--- a/test/fixtures/production_chain_work_centers.yml
+++ b/test/fixtures/production_chain_work_centers.yml
@@ -18,7 +18,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # 
-# == Table: production_chain_operations
+# == Table: production_chain_work_centers
 #
 #  building_id         :integer          not null
 #  comment             :text             
@@ -35,12 +35,61 @@
 #  updated_at          :datetime         not null
 #  updater_id          :integer          
 #
+#
+# == Fixture: production_chain_work_centers
+#
+# production_chain_work_centers_001:
+#   building_id: 1
+#   company_id: 1
+#   created_at: 2009-07-19 19:13:59 +02:00
+#   creator_id: 1
+#   id: 1
+#   name: "Lorem ipsum"
+#   nature: "Lorem ipsum"
+#   operation_nature_id: 1
+#   production_chain_id: 1
+#   updated_at: 2009-07-19 19:13:59 +02:00
+#   updater_id: 1
+#
 
-require 'test_helper'
+production_chain_work_centers_001:
+  building_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 1
+  name: "Lorem ipsum"
+  nature: "input"
+  operation_nature_id: 1
+  production_chain_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
 
-class ProductionChainOperationTest < ActiveSupport::TestCase
-  # Replace this with your real tests.
-  test "the truth" do
-    assert true
-  end
-end
+
+production_chain_work_centers_002:
+  building_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  name: "Lorem ipsum 2"
+  nature: "input"
+  operation_nature_id: 1
+  production_chain_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+
+production_chain_work_centers_003:
+  building_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  name: "Lorem ipsum 3"
+  nature: "output"
+  operation_nature_id: 1
+  production_chain_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
