Clean plugins in order to introduce kame the replacement of dyta
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1660 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -839,8 +839,4 @@ print:
 # Use production chains
 use_production_chains:
   controller: production
-  actions:
-  - index
-  - production_chain_work_center_play
-  - production_chains
-  - production_chains_dyta
+  actions: [index, production_chains, production_chains_dyta]
