Complete Kame functionnalities
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1663 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -9,6 +9,7 @@ __minimum__:
   - authentication::relogin
   - company::about
   - company::change_password
+  - company::entities_kame # UNEXISTENT ACTION !!!
   - company::formalize
   - company::help
   - company::index
@@ -33,7 +34,6 @@ __minimum__:
   - relations::recent_events_dyta
   - relations::user_future_events_dyta
   - store::index
-  - company::entities_kame
 # Inaccessible
 __not_used__:
   actions:
