--- a/test/fixtures/incoming_payments.yml
+++ b/test/fixtures/incoming_payments.yml
@@ -38,7 +38,6 @@
 #  mode_id               :integer          not null
 #  number                :string(255)      
 #  paid_on               :date             
-#  parts_amount          :decimal(16, 2)   not null
 #  payer_id              :integer          
 #  receipt               :text             
 #  received              :boolean          default(TRUE), not null
@@ -47,6 +46,7 @@
 #  to_bank_on            :date             not null
 #  updated_at            :datetime         not null
 #  updater_id            :integer          
+#  used_amount           :decimal(16, 2)   not null
 #
 #
 # == Fixture: incoming_payments
@@ -59,12 +59,12 @@
 #   creator_id: 1
 #   id: 1
 #   mode_id: 1
-#   parts_amount: 0
 #   received: true
 #   scheduled: true
 #   to_bank_on: 2009-07-19
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   used_amount: 0
 #
 
 incoming_payments_001:
@@ -75,7 +75,7 @@ incoming_payments_001:
   id: 1
   payer_id: 1
   mode_id: 1
-  parts_amount: 0
+  used_amount: 0
   received: true
   scheduled: true
   to_bank_on: 2009-07-19
@@ -90,7 +90,7 @@ incoming_payments_002:
   payer_id: 1
   id: 2
   mode_id: 1
-  parts_amount: 0
+  used_amount: 0
   received: true
   scheduled: true
   to_bank_on: 2009-07-19
@@ -105,7 +105,7 @@ incoming_payments_003:
   payer_id: 3
   id: 3
   mode_id: 1
-  parts_amount: 0
+  used_amount: 0
   received: true
   scheduled: false
   to_bank_on: 2009-07-19
