--- a/test/fixtures/purchase_orders.yml
+++ b/test/fixtures/purchase_orders.yml
@@ -35,7 +35,7 @@
 #  lock_version      :integer          default(0), not null
 #  moved_on          :date             
 #  number            :string(64)       not null
-#  parts_amount      :decimal(16, 2)   default(0.0), not null
+#  paid_amount       :decimal(16, 2)   default(0.0), not null
 #  planned_on        :date             
 #  reference_number  :string(255)      
 #  shipped           :boolean          not null
@@ -55,7 +55,7 @@
 #   creator_id: 1
 #   id: 1
 #   number: "Lorem ipsum"
-#   parts_amount: 0
+#   paid_amount: 0
 #   shipped: true
 #   supplier_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
@@ -71,6 +71,7 @@ purchase_orders_001:
   id: 1
   number: "P000001"
   shipped: false
+  state: "draft"
   supplier_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -84,6 +85,7 @@ purchase_orders_002:
   id: 2
   number: "P000001"
   shipped: false
+  state: "draft"
   supplier_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
