--- a/test/fixtures/sales_orders.yml
+++ b/test/fixtures/sales_orders.yml
@@ -43,13 +43,12 @@
 #  id                  :integer          not null, primary key
 #  introduction        :text             
 #  invoice_contact_id  :integer          
-#  invoiced            :boolean          not null
 #  journal_entry_id    :integer          
 #  letter_format       :boolean          default(TRUE), not null
 #  lock_version        :integer          default(0), not null
 #  nature_id           :integer          not null
 #  number              :string(64)       not null
-#  parts_amount        :decimal(16, 2)   
+#  paid_amount         :decimal(16, 2)   
 #  payment_delay_id    :integer          not null
 #  responsible_id      :integer          
 #  state               :string(64)       default("O"), not null
@@ -75,7 +74,6 @@
 #   expired_on: 2009-07-19
 #   has_downpayment: true
 #   id: 1
-#   invoiced: true
 #   letter_format: true
 #   nature_id: 1
 #   number: "Lorem ipsum"
@@ -99,12 +97,11 @@ sales_orders_001:
   expired_on: 2009-07-19
   has_downpayment: true
   id: 1
-  invoiced: true
   letter_format: true
   nature_id: 1
   number: "SO123456"
   payment_delay_id: 1
-  state: "E"
+  state: "draft"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -122,12 +119,11 @@ sales_orders_002:
   expired_on: 2009-07-19
   has_downpayment: true
   id: 2
-  invoiced: false
   letter_format: true
   nature_id: 1
   number: "SO123457"
   payment_delay_id: 1
-  state: "E"
+  state: "draft"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
@@ -145,12 +141,11 @@ sales_orders_003:
   expired_on: 2009-07-19
   has_downpayment: true
   id: 3
-  invoiced: false
   letter_format: true
   nature_id: 1
   number: "SO123457"
   payment_delay_id: 1
-  state: "E"
+  state: "draft"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
