--- a/test/fixtures/transfers.yml
+++ b/test/fixtures/transfers.yml
@@ -31,7 +31,7 @@
 #  journal_entry_id :integer          
 #  label            :string(255)      
 #  lock_version     :integer          default(0), not null
-#  parts_amount     :decimal(16, 2)   default(0.0), not null
+#  paid_amount      :decimal(16, 2)   default(0.0), not null
 #  started_on       :date             
 #  stopped_on       :date             
 #  supplier_id      :integer          
@@ -47,7 +47,7 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   parts_amount: 0
+#   paid_amount: 0
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
