--- a/test/fixtures/purchase_orders.yml
+++ b/test/fixtures/purchase_orders.yml
@@ -20,29 +20,30 @@
 # 
 # == Table: purchase_orders
 #
-#  accounted_at      :datetime         
-#  amount            :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes :decimal(16, 2)   default(0.0), not null
-#  comment           :text             
-#  company_id        :integer          not null
-#  created_at        :datetime         not null
-#  created_on        :date             
-#  creator_id        :integer          
-#  currency_id       :integer          
-#  dest_contact_id   :integer          
-#  id                :integer          not null, primary key
-#  journal_entry_id  :integer          
-#  lock_version      :integer          default(0), not null
-#  moved_on          :date             
-#  number            :string(64)       not null
-#  paid_amount       :decimal(16, 2)   default(0.0), not null
-#  planned_on        :date             
-#  reference_number  :string(255)      
-#  shipped           :boolean          not null
-#  state             :string(64)       
-#  supplier_id       :integer          not null
-#  updated_at        :datetime         not null
-#  updater_id        :integer          
+#  accounted_at        :datetime         
+#  amount              :decimal(16, 2)   default(0.0), not null
+#  amount_with_taxes   :decimal(16, 2)   default(0.0), not null
+#  comment             :text             
+#  company_id          :integer          not null
+#  confirmed_on        :date             
+#  created_at          :datetime         not null
+#  created_on          :date             
+#  creator_id          :integer          
+#  currency_id         :integer          
+#  delivery_contact_id :integer          
+#  id                  :integer          not null, primary key
+#  journal_entry_id    :integer          
+#  lock_version        :integer          default(0), not null
+#  moved_on            :date             
+#  number              :string(64)       not null
+#  paid_amount         :decimal(16, 2)   default(0.0), not null
+#  planned_on          :date             
+#  reference_number    :string(255)      
+#  responsible_id      :integer          
+#  state               :string(64)       
+#  supplier_id         :integer          not null
+#  updated_at          :datetime         not null
+#  updater_id          :integer          
 #
 #
 # == Fixture: purchase_orders
@@ -56,7 +57,6 @@
 #   id: 1
 #   number: "Lorem ipsum"
 #   paid_amount: 0
-#   shipped: true
 #   supplier_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
@@ -70,7 +70,6 @@ purchase_orders_001:
   creator_id: 1
   id: 1
   number: "P000001"
-  shipped: false
   state: "draft"
   supplier_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -84,8 +83,20 @@ purchase_orders_002:
   creator_id: 1
   id: 2
   number: "P000001"
-  shipped: false
   state: "draft"
+  supplier_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+purchase_orders_003:
+  amount: 0
+  amount_with_taxes: 0
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  number: "P000001"
+  state: "processing"
   supplier_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
